2006-11-07  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Gedit and gnome-keyring-manager branched
	for 2.16

2006-11-07  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Updated branch for
	gnome-{desktop,panel,session} for gnome-2.16

2006-11-01  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status: Updated branch for gnome-menus 2.16 to gnome-2-16

2006-10-31  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* translation-status.xml: Updated branches for libgnome,
	libgnomeui, libgnomeprint and libgnomeprintui.

2006-10-29  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Update gnome-system-monitor branch for 
	gnome-2-16.

2006-10-26  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* translation-status.xml: Update vino branch for
	gnome-2-14 (yeah, obsolete, but I hate <100% ;))

2006-10-20  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Set release branch for 2.16 to
	gnome-2-16 for gnome-screensaver and nautilus-cd-burn.
	
2006-10-20  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Set release branch for evolution-webcal
	to HEAD for gnome 2.16

2006-10-16  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Set release branch for
	evolution-data-server, evolution-exchange, gtkhtml to gnome-2-16.

2006-10-15  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Set release branch for evolution to gnome-2-16.

2006-10-15  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Set release branch for gnome-doc-utils to gnome-2-16.

2006-10-15  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Set release branch for vino to gnome-2-16.

2006-10-15  Francisco Javier F. Serrador  <serrador@openshine.com>
