@@ -1901,6 +1901,13 @@
         <regenerate/>
         <download/>
       </component>
+      <component name="gthumb-HEAD" dir="gthumb" group="fifth-toe">
+        <podir dir="po"/>
+        <potname name="gthumb.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
     </version>
   </module>
   <module name="gnopernicus">
