@@ -1,3 +1,8 @@
+2006-11-08  Francisco Javier F. Serrador  <serrador@openshine.com>
+
+	* translation-status.xml: gthumb modified in a non-standard
+	way. (trying to provide pot files for two different branches)
+
 2006-11-07  Francisco Javier F. Serrador  <serrador@openshine.com>
 
 	* translation-status.xml: Gedit and gnome-keyring-manager branched
